2002-02-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03005] fix Bad cert ident
	* istream.c (ssl_match_cert_ident): added
	* istream.c (ssl_check_cert_ident): use ssl_match_cert_ident()

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02999] don't ask accept bad cert when background downloading
	* file.c (getAuthCookie): if QuietMessage, return NULL
	* file.c (inputAnswer): if QuietMessage, input "n"

2002-02-05  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02991] form support in w3m -halfdump foo.html|w3m -halfload
	* fm.h (DUMP_HALFEXTRA): deleted
	* proto.h (process_select): return Str
	* file.c (process_img): process_form() fix
	* file.c (process_input): process_form() fix
	* file.c (process_select): return Str
				process_form() fix
	* file.c (process_textarea): process_form() fix
	* file.c (process_form): support -halfdump
	* file.c (HTMLtagproc1): delete case HTML_FORM_INT, HTML_N_FORM_INT
				process_{form,select,textarea}() fix
	* file.c (HTMLlineproc2body): support -halfload
				HTML_INTERNAL, HTML_N_INTERNAL,
				HTML_FORM_INT, HTML_FORM_INT,
				HTML_TEXTAREA_INT, HTML_N_TEXTAREA_INT,
				HTML_SELECT_INT, HTML_N_SELECT_INT,
				HTML_OPTION_INT, HTML_TITLE_ALT
	* file.c (print_internal_information): fix -halfdump
	* file.c (loadHTMLstream): no DUMP_HALFEXTRA
	* html.h: add HTML_INTERNAL, HTML_N_INTERNAL, 
			HTML_SELECT_INT, HTML_N_SELECT_INT,
			HTML_OPTION_INT, HTML_TEXTAREA_INT, HTML_N_TEXTAREA_INT
	* html.c (ALST_TEXTAREA_INT): added
	* html.c (ALST_SELECT_INT): added
	* html.c: add <internal>, </internal>, <select_int>, </select_int>
		<option_int>, <textarea_int>, </textarea_int>
	* main.c (MAIN): delete -halfdump_extra
		dont output <pre> by -halfdump
	* table.c (feed_table_tag): process_{form,select}() fix
		add case HTML_INTERNAL, HTML_N_INTERNAL,
		    HTML_SELECT_INT, HTML_N_SELECT_INT,
		    HTML_OPTION_INT, HTML_TEXTAREA_INT, HTML_N_TEXTAREA_INT,