@@ -1,3 +1,14 @@
+2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03006] fix form order in table
+	* file.c (process_form): static
+			fix form index order
+			method should be quoted
+	* file.c (process_form): added
+	* file.c (HTMLlineproc2body): add form_id
+	* html.c (ALST_FORM_INT): added
+	* html.c (form_int): update
+
 2002-02-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03005] fix Bad cert ident
